feat(canvas) Draw sample rectangles. Check intersection

--- a/app/scripts/menu/menu.html
+++ b/app/scripts/menu/menu.html
@@ -47,6 +47,10 @@
 				<i class="icon ion-map"></i>
 					Map
 				</ion-item>
+				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/canvas">
+				<i class="icon ion-edit"></i>
+					Canvas
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
