--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,7 @@
 	<script src="bower_components/angularfire/dist/angularfire.js"></script>
 	<script src="bower_components/angular-bootstrap-calendar/dist/js/angular-bootstrap-calendar-tpls.js"></script>
 	<script src="bower_components/ng-cordova-oauth/dist/ng-cordova-oauth.js"></script>
+	<script src="bower_components/paper/dist/paper-full.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 
