chore(*) Improve naming. Scaffold move screen

--- a/app/scripts/menu/menu.html
+++ b/app/scripts/menu/menu.html
@@ -23,7 +23,7 @@
 					<i class="icon ion-ios-home"></i>
 					Home
 				</ion-item>
-				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/canvas">
+				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/canvas-marque">
 				<i class="icon ion-edit"></i>
 					Canvas
 				</ion-item>
