--- a/app/scripts/canvas-move/canvas-move.html
+++ b/app/scripts/canvas-move/canvas-move.html
@@ -14,7 +14,7 @@
 
 
 	<ion-content id="canvas-view" scroll="false">
-		<pre id="log">log</pre><canvas id="myCanvas" resize width="100%" height="100%"></canvas>
+		<pre id="log">log</pre><canvas id="canvasMove" resize width="100%" height="100%"></canvas>
 	</ion-content>
 
 </ion-view>
